--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,6 @@
 html, body {
+    font-family: system-ui,-apple-system,Segoe UI,Roboto,Noto Sans,Ubuntu,Cantarell,Helvetica Neue,Helvetica,Arial,Verdana;
+    -webkit-font-smoothing: antialiased;
     height: 100%;
 }
 
@@ -12,15 +14,50 @@ html, body {
 .m-menu {
     margin: 0;
     padding: 0;
-    flex-grow: 3;
-    background-color: yellow;
+    width: 25%;
+    background-color: #2f2f2f;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
+
+.m-menu-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 2rem;
+}
+
+.m-menu-header-logo {
+    width: 40%;
+}
+
+.m-menu-header-logo img {
+    width: 100%;
+    transform: translate3d(16%,24%,0);
+}
+
+.m-menu-header-title {
+    font-size: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ccc;
+}
+
+.m-menu-three {
+    width: 100%;
+    height: 100%;
+    background-color: white;
+}
+
 
 .m-main {
     margin: 0;
     padding: 0;
-    flex-grow: 7;
-    background-color: green;
+    width: 75%;
+    background-color: white;
     display: flex;
 }
