--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 html, body {
-    font-family: system-ui,-apple-system,Segoe UI,Roboto,Noto Sans,Ubuntu,Cantarell,Helvetica Neue,Helvetica,Arial,Verdana;
+    font-family: system-ui, -apple-system, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue, Helvetica, Arial, Verdana;
     -webkit-font-smoothing: antialiased;
     height: 100%;
 }
@@ -37,7 +37,7 @@ html, body {
 
 .m-menu-header-logo img {
     width: 100%;
-    transform: translate3d(16%,24%,0);
+    transform: translate3d(16%, 24%, 0);
 }
 
 .m-menu-header-title {
@@ -54,11 +54,22 @@ html, body {
     background-color: white;
 }
 
-
 .m-main {
     margin: 0;
     padding: 0;
+    padding-left: 1rem;
+    padding-right: 1rem;
     width: 75%;
     background-color: white;
-    display: flex;
+}
+
+.m-main-title {
+    font-size: 3rem;
+    border: 0;
+    width: 100%;
+}
+
+.m-main-text {
+    overflow-x: hidden;
+    overflow-y: visible;
 }
