--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,7 +28,7 @@ html, body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-bottom: 2rem;
+    /* margin-bottom: 2rem; */
 }
 
 .m-menu-header-logo {
@@ -52,6 +52,7 @@ html, body {
     width: 100%;
     height: 100%;
     background-color: white;
+    overflow-y: auto;
 }
 
 .m-main {
@@ -69,9 +70,14 @@ html, body {
     font-size: 3rem;
     border: 0;
     width: 100%;
+    line-height: normal;
 }
 
 .m-main-text {
     overflow-x: hidden;
     flex: 1;
+}
+
+.ct-inspector {
+    display: none;
 }
