--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,86 +1,118 @@
-html, body {
-    font-family: system-ui, -apple-system, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue, Helvetica, Arial, Verdana;
-    -webkit-font-smoothing: antialiased;
-    height: 100%;
+html,
+body {
+  font-family: system-ui, -apple-system, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue, Helvetica,
+    Arial, Verdana;
+  -webkit-font-smoothing: antialiased;
+  height: 100%;
 }
 
 .m-container {
-    display: flex;
-    flex-direction: row;
-    height: 100%;
-    width: 100%;
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  width: 100%;
+}
+
+.m-menu-open-line {
+  z-index: 100;
+  width: 7rem;
+  background-color: #2f2f2f;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 2rem 0 0 0;
 }
 
 .m-menu {
-    margin: 0;
-    padding: 0;
-    width: 20%;
-    background-color: #2f2f2f;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border-right: 1px solid silver;
+  margin: 0;
+  padding: 0;
+  width: 20%;
+  background-color: #2f2f2f;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-right: 1px solid silver;
 }
 
 .m-menu-header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    /* margin-bottom: 2rem; */
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  /* margin-bottom: 2rem; */
+}
+
+.m-menu-btn {
+  position: absolute;
+  left: 10px;
+  top: 5px;
+  font-size: 1.2rem;
+  text-decoration: underline;
+  color: white;
+  cursor: pointer;
+}
+
+.opnen-btn {
+  position: static;
+}
+
+.non-visible {
+  display: none;
 }
 
 .m-menu-header-logo {
-    width: 40%;
+  width: 40%;
 }
 
 .m-menu-header-logo img {
-    width: 100%;
-    /* transform: translate3d(0%, 24%, 0); */
+  width: 100%;
+  /* transform: translate3d(0%, 24%, 0); */
 }
 
 .m-menu-header-title {
-    font-size: 3rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #ccc;
+  font-size: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ccc;
 }
 
 .m-menu-three {
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    overflow-y: auto;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  overflow-y: auto;
 }
 
 .m-main {
-    margin: 0;
-    padding: 0;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    width: 80%;
-    flex-direction: column;
-    display: flex;
-    background-color: white;
-    overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  width: 80%;
+  flex-direction: column;
+  display: flex;
+  background-color: white;
+  overflow-x: hidden;
 }
 
 .m-main-title {
-    font-size: 3rem;
-    border: 0;
-    width: 100%;
-    line-height: normal;
+  font-size: 3rem;
+  border: 0;
+  width: 100%;
+  line-height: normal;
 }
 
 .m-main-text {
-    flex: 1;
-    padding-bottom: 4rem;
+  flex: 1;
+  padding-bottom: 4rem;
 }
 
 .ct-inspector {
-    left: inherit !important;
-    right: 0 !important;
-    width: 76% !important;
+  left: inherit !important;
+  right: 0 !important;
+  width: 76% !important;
 }
